api/debug/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: cdrive
spec:
  selector:
    name: cdrive
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
