api/debug/ing.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: cdrive
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: <cdrive_api_hostname>
    http:
      paths: 
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cdrive 
            port: 
              number: 8000
  tls:
  - secretName: tls-prod-cert
    hosts:
    - <cdrive_api_hostname>
